# ROS2---RVIZ-and-Gazebo-Robot-Manipulating-and-Steering

./: README.md  lab1.md  lab1_naw.md  lab2.md  lab2_naw.md  lab3.md  lab6.md  projekt1.md  projekt2_nav.md
custom_action_servers/: CMakeLists.txt  package.xml
custom_action_servers/action/: NavigatePoints.action
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/config/joy_teleop/: joy_config.yaml  joy_teleop_omni_base.yaml
hello_moveit/config/motions/: tiago_motions.yaml.em  tiago_motions_custom.yaml  tiago_motions_general.yaml  tiago_motions_no-arm.yaml  tiago_motions_robotiq-2f-85.yaml  tiago_motions_robotiq-epick.yaml
hello_moveit/config/twist_mux/: joystick_omni_base.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
hello_moveit/launch/: navi.launch.py  our_world.launch.py  system_bringup.launch.py
hello_moveit/models/new_models/green_cube_1/: model.sdf
hello_moveit/models/new_models/green_cube_2/: model.sdf
hello_moveit/models/new_models/green_cube_3/: model.config
hello_moveit/module/: 20_navigation.yaml
hello_moveit/params/: tiago_omni_base_loc_w_compositon.yaml  tiago_omni_base_remappings_sim.yaml  tiago_pmb2_loc.yaml  tiago_pmb2_loc_w_compositon.yaml  tiago_pmb2_nav.yaml  tiago_pmb2_nav_public_sim.yaml  tiago_pmb2_nav_w_composition.yaml  tiago_pmb2_remappings.yaml  tiago_slam.yaml
hello_moveit/scripts/: regen_em_file.py
hello_moveit/worlds/: stero.world  stero3.world
hello_stero/: CMakeLists.txt  package.xml
hello_stero/src/: hello_stero_node.cpp
meros/: Projekt MeROS.docx  projekt MeROS.vpp
moveit_project/: CMakeLists.txt  package.xml
moveit_project/launch/: launch.xml
moveit_project/src/: moveit_project.cpp
one-grasp/: CMakeLists.txt  package.xml
one_grasp/: CMakeLists.txt  package.xml
one_grasp/launch/: launch.xml
one_grasp/src/: one_grasp.cpp
opener/: CMakeLists.txt  package.xml
opener/config/motions/: tiago_motions_pal-hey5.yaml
opener/config/rviz/: navigation.rviz
opener/launch/: gazebo.launch.py  map.launch.py  stero_navigation.launch.py
opener/maps/korytarz/: map.pgm  map.yaml
opener/maps/mieszkanie/: map.pgm  map.yaml
opener/models/new_models/green_cube_1/: model.config
opener/models/new_models/green_cube_2/: model.config
opener/models/new_models/green_cube_3/: model.sdf
opener/module/: 20_localization.yaml  20_localization_w_composition.yaml  20_slam.yaml  play_motion2.yaml
opener/params/: tiago_omni_base_loc.yaml  tiago_omni_base_nav.yaml  tiago_omni_base_nav_public_sim.yaml  tiago_pmb2_remappings_sim.yaml
opener/worlds/: korytarz.world  mieszkanie.world  stero2.world
pick_place/: CMakeLists.txt  package.xml
pick_place/launch/: launch.xml
pick_place/src/: pick_place.cpp
pick_place_robust/: CMakeLists.txt  package.xml
pick_place_robust/launch/: launch.xml
pick_place_robust/src/: pick_place_robust.cpp
pieciokat/: CMakeLists.txt  package.xml
pieciokat/launch/: launch.xml
pieciokat/src/: pieciokat.cpp
point_commander/: package.xml  setup.cfg  setup.py
point_commander/launch/: commander.launch.py
point_commander/point_commander/: point_commander.py
projekt1/: package.xml  setup.cfg  setup.py
projekt1/launch/: projekt1_launch.py
projekt1/projekt1/: projekt1.py
projekt2/: package.xml  setup.py
projekt2/projekt2/: projekt2.py
show_all_grasps/: CMakeLists.txt  package.xml
show_all_grasps/launch/: launch.xml
show_all_grasps/src/: show_all_grasps.cpp
show_selected_grasps/: CMakeLists.txt  package.xml
show_selected_grasps/launch/: launch.xml
show_selected_grasps/src/: show_selected_grasps.cpp
show_side_grasps/: CMakeLists.txt  package.xml
show_side_grasps/launch/: launch.xml
show_side_grasps/src/: show_side_grasps.cpp
stero_map/: CMakeLists.txt  package.xml
stero_map/module/: 20_navigation_w_composition.yaml
stero_map/params/: tiago_omni_base_nav_w_composition.yaml  tiago_omni_base_remappings.yaml
stero_stuff/: markdaun  nodes  topics
stero_world/: CMakeLists.txt  package.xml
system_bringup/: CMakeLists.txt  package.xml
system_bringup/config/motions/: tiago_motions_pal-gripper.yaml  tiago_motions_robotiq-2f-140.yaml
system_bringup/launch/: navi.launch.py  our_world.launch.py  system_bringup.launch.py
tower_2/: CMakeLists.txt  package.xml
tower_2/launch/: launch.xml
tower_2/src/: tower_2.cpp
tower_3/: CMakeLists.txt  package.xml
tower_3/launch/: launch.xml
tower_3/src/: tower_3.cpp
